tests/tests/ui/nested_option_field.stderr
error[E0277]: the trait bound `bool: schema::field::SameType<Option<bool>>` is not satisfied
  --> tests/ui/nested_option_field.rs:13:5
   |
13 |     flag: Option<Option<bool>>,
   |     ^^^^ the trait `schema::field::SameType<Option<bool>>` is not implemented for `bool`
   |
help: the trait `toasty::schema::Field` is implemented for `Option<T>`
  --> $WORKSPACE/crates/toasty/src/schema/field.rs
   |
   | impl<T: Field + NotNullable> Field for Option<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: required for `Option<bool>` to implement `NotNullable`
   = note: required for `Option<Option<bool>>` to implement `toasty::schema::Field`

error[E0277]: the trait bound `bool: schema::field::SameType<Option<bool>>` is not satisfied
 --> tests/ui/nested_option_field.rs:7:17
  |
7 | #[derive(Debug, toasty::Model)]
  |                 ^^^^^^^^^^^^^ the trait `schema::field::SameType<Option<bool>>` is not implemented for `bool`
  |
help: the trait `toasty::schema::Field` is implemented for `Option<T>`
 --> $WORKSPACE/crates/toasty/src/schema/field.rs
  |
  | impl<T: Field + NotNullable> Field for Option<T> {
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: required for `Option<bool>` to implement `NotNullable`
  = note: required for `Option<Option<bool>>` to implement `toasty::schema::Field`
  = note: this error originates in the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `impl _toasty::codegen_support::IntoExpr<<Option<Option<bool>> as _toasty::codegen_support::Field>::ExprTarget>: IntoExpr<Option<Option<bool>>>` is not satisfied
 --> tests/ui/nested_option_field.rs:7:17
  |
7 | #[derive(Debug, toasty::Model)]
  |                 ^^^^^^^^^^^^^ unsatisfied trait bound
  |
  = help: the trait `IntoExpr<Option<Option<bool>>>` is not implemented for `impl _toasty::codegen_support::IntoExpr<<Option<Option<bool>> as _toasty::codegen_support::Field>::ExprTarget>`
  = note: this error originates in the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `impl _toasty::codegen_support::Assign<<Option<Option<bool>> as _toasty::codegen_support::Field>::ExprTarget>: Assign<Option<Option<bool>>>` is not satisfied
 --> tests/ui/nested_option_field.rs:7:17
  |
7 | #[derive(Debug, toasty::Model)]
  |                 ^^^^^^^^^^^^^ unsatisfied trait bound
  |
  = help: the trait `Assign<Option<Option<bool>>>` is not implemented for `impl _toasty::codegen_support::Assign<<Option<Option<bool>> as _toasty::codegen_support::Field>::ExprTarget>`
  = note: this error originates in the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `bool: schema::field::SameType<Option<bool>>` is not satisfied
  --> tests/ui/nested_option_field.rs:13:11
   |
13 |     flag: Option<Option<bool>>,
   |           ^^^^^^^^^^^^^^^^^^^^ the trait `schema::field::SameType<Option<bool>>` is not implemented for `bool`
   |
help: the trait `toasty::schema::Field` is implemented for `Option<T>`
  --> $WORKSPACE/crates/toasty/src/schema/field.rs
   |
   | impl<T: Field + NotNullable> Field for Option<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: required for `Option<bool>` to implement `NotNullable`
   = note: required for `Option<Option<bool>>` to implement `toasty::schema::Field`

error[E0277]: the trait bound `impl _toasty::codegen_support::Assign<<Option<Option<bool>> as _toasty::codegen_support::Field>::ExprTarget>: Assign<Option<Option<bool>>>` is not satisfied
  --> tests/ui/nested_option_field.rs:13:5
   |
13 |     flag: Option<Option<bool>>,
   |     ^^^^ unsatisfied trait bound
   |
   = help: the trait `Assign<Option<Option<bool>>>` is not implemented for `impl _toasty::codegen_support::Assign<<Option<Option<bool>> as _toasty::codegen_support::Field>::ExprTarget>`
note: required by a bound in `DocUpdate::<__toasty_T>::set_flag`
  --> tests/ui/nested_option_field.rs:7:17
   |
 7 | #[derive(Debug, toasty::Model)]
   |                 ^^^^^^^^^^^^^ required by this bound in `DocUpdate::<__toasty_T>::set_flag`
...
13 |     flag: Option<Option<bool>>,
   |     ---- required by a bound in this associated function
   = note: this error originates in the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)
